Fixed statements configuration.

--- a/src/main/webapp/css/_responsive.scss
+++ b/src/main/webapp/css/_responsive.scss
@@ -2,8 +2,8 @@
     _responsive.scss: responsive configuration of the flussbad-theme
 
     Created:    2017-09-12 19:34 by Christian Berndt
-    Modified:   2017-09-18 22:27 by Christian Berndt
-    Version:    0.1.8
+    Modified:   2017-09-18 22:43 by Christian Berndt
+    Version:    0.1.9
 */
 
 
@@ -180,8 +180,8 @@
         }
            
         blockquote {
-            font-size: $h1-font-size;
-            padding: 0 8.54701% 1em;
+            font-size: $h1-font-size ! important;
+            padding: 0 8.54701% 1em ! important;
         }
     }
 }
