Configured events-small.

--- a/src/main/webapp/css/_responsive.scss
+++ b/src/main/webapp/css/_responsive.scss
@@ -2,14 +2,25 @@
     _responsive.scss: responsive configuration of the flussbad-theme
 
     Created:    2017-09-12 19:34 by Christian Berndt
-    Modified:   2017-09-18 22:43 by Christian Berndt
-    Version:    0.1.9
+    Modified:   2017-09-19 00:30 by Christian Berndt
+    Version:    0.2.0
 */
 
 
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
+    
+    .events-small {
+            
+        h2 {
+            display: inline-block;
+            
+            &.date {
+                margin-right: 10px;
+            }
+        }
+    }
     
     #footer {
     
