--- a/src/main/webapp/css/_adt.scss
+++ b/src/main/webapp/css/_adt.scss
@@ -2,8 +2,8 @@
     _adt.scss: Configuration of application display templates of the flussbad-theme
 
     Created:    2017-09-13 19:02 by Christian Berndt
-    Modified:   2017-09-18 13:22 by Christian Berndt
-    Version:    0.1.2
+    Modified:   2017-09-19 00:29 by Christian Berndt
+    Version:    0.1.3
 */
 
 @import "custom_mixins";
@@ -11,30 +11,19 @@
 
 .portlet-asset-publisher {
     
-    .events {
+    .events-small {
+    
         text-align: center;
-    }
-    
+        
+        h2 {
+            font-size: $lead-font-size; 
             
-        .statements.sand {
-            background-color: $color-sand;
+            &.date {
+                font-family: $regular-font-family; 
+                font-weight: normal;
+            }      
         }
         
-        .statements.turquois {
-            background-color: $color-turquois;
-            color: white;
-        } 
-        
-    .statements {
-    
-        .statement {
-                                      
-            blockquote {
-            }
-          
-            .author {
-            }
-        }
     }
         
     .statements {
