button template and css config.

--- a/src/main/webapp/css/_responsive.scss
+++ b/src/main/webapp/css/_responsive.scss
@@ -11,6 +11,13 @@
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
     
+            
+    .button {
+    
+        padding-bottom: 120px;
+    
+    }
+    
     .events-small {
             
         h2 {
