--- a/src/main/webapp/css/_adt.scss
+++ b/src/main/webapp/css/_adt.scss
@@ -2,14 +2,81 @@
     _adt.scss: Configuration of application display templates of the flussbad-theme
 
     Created:    2017-09-13 19:02 by Christian Berndt
-    Modified:   2017-09-19 00:29 by Christian Berndt
-    Version:    0.1.3
+    Modified:   2017-09-19 17:45 by Christian Berndt
+    Version:    0.1.4
 */
 
 @import "custom_mixins";
 @import "variables";
 
 .portlet-asset-publisher {
+    
+    .events {
+    
+        margin-left: -15px; 
+        margin-right: -15px;
+        
+        .event {
+        
+            padding: 30px 0;
+        
+           .summary {
+           
+               font-family: $light-font-family;
+               font-size: $lead-font-size;
+               line-height: $lead-line-height;
+           }
+           
+           &:nth-child(even) {
+            
+                background: lighten($color-sand, 5%);
+                
+                .asset-social-media {
+                
+                     border-top-color: white;
+                }
+            }
+            
+            &:nth-child(odd) {
+            
+                background: white;
+            }
+        }
+        
+/*         .taglib-header { */
+        
+/*             display: none;  */
+/*         } */
+                        
+/*         .metadata-entry { */
+        
+/*             display: block; */
+/*             float: none; */
+/*         } */
+        
+        .date {
+        
+            margin-top: 20px; /* same as bs3 h1 */
+            
+            @include event-date(); 
+        }
+                
+        .location {        
+            @include event-location(); 
+        }
+        
+        .time {
+        
+            padding-bottom: .55em;
+                    
+            .icon-time {
+                            
+               display: inline-block;
+               margin-top: 2px;
+               width: 25px;
+            }
+        }
+    }
     
     .events-small {
     
