--- a/src/main/webapp/css/_adt.scss
+++ b/src/main/webapp/css/_adt.scss
@@ -2,14 +2,55 @@
     _adt.scss: Configuration of application display templates of the flussbad-theme
 
     Created:    2017-09-13 19:02 by Christian Berndt
-    Modified:   2017-09-19 17:45 by Christian Berndt
-    Version:    0.1.4
+    Modified:   2017-10-10 16:10 by Christian Berndt
+    Version:    0.1.5
 */
 
 @import "custom_mixins";
 @import "variables";
 
 .portlet-asset-publisher {
+    
+    .articles {
+        
+        font-size: $mobile-default-font-size;    
+        margin-left: -15px;
+        margin-right: -15px;
+        
+        .asset-metadata {
+            line-height: 28px;
+            vertical-align: bottom;
+            margin-top: 10px;
+        }
+        
+        .container {
+            padding-top: 1em;
+        }
+        
+        h1 {
+            font-size: $mobile-h2-font-size;
+            line-height: $mobile-lead-line-height;
+            margin-top: 10px;       
+        }
+                
+        .label {
+            color: $default-font-color;
+            font-weight: normal;
+            padding-left: 0; 
+            font-size: 100%;
+        }
+        
+        .share-buttons {
+            border-top: 5px solid #F5F4F0;
+            padding-top: 1em !important;
+            padding-bottom: 1em !important;
+        }
+        
+        .summary {
+            font-size: $mobile-lead-font-size;
+            line-height: $mobile-lead-line-height;        
+        }
+    }
     
     .events {
     
