--- a/src/main/webapp/css/_responsive.scss
+++ b/src/main/webapp/css/_responsive.scss
@@ -2,8 +2,8 @@
     _responsive.scss: responsive configuration of the flussbad-theme
 
     Created:    2017-09-12 19:34 by Christian Berndt
-    Modified:   2017-09-19 15:53 by Christian Berndt
-    Version:    0.2.2
+    Modified:   2017-10-10 18:08 by Christian Berndt
+    Version:    0.2.3
 */
 
 
@@ -207,17 +207,39 @@
             }
         }
     }
+        
+    .portlet-asset-publisher {
     
-    .statements {
-    
-        .author {
-            padding: 0 8.54701%;
-        }
-           
-        blockquote {
-            font-size: $h1-font-size ! important;
-            padding: 0 8.54701% 1em ! important;
-        }
+        .articles {
+        
+            font-size: $default-font-size;    
+        
+            .asset-metadata {
+                line-height: $h1-line-height;
+            }
+        
+            h1 {
+                font-size: $h1-font-size;
+                line-height: $h1-line-height;
+            }
+            
+            .summary {
+                font-size: $lead-font-size;
+                line-height: $lead-line-height;        
+            }
+        } 
+        
+        .statements {
+        
+            .author {
+                padding: 0 8.54701%;
+            }
+               
+            blockquote {
+                font-size: $h1-font-size ! important;
+                padding: 0 8.54701% 1em ! important;
+            }
+        }   
     }
 }
 
