--- a/src/main/webapp/css/_custom.scss
+++ b/src/main/webapp/css/_custom.scss
@@ -2,8 +2,8 @@
     _custom.scss: main config of the flussbad-theme
 
     Created:    2017-09-07 16:32 by Christian Berndt
-    Modified:   2017-10-31 18:41 by Christian Berndt
-    Version:    1.1.3
+    Modified:   2017-10-31 19:05 by Christian Berndt
+    Version:    1.1.4
 */
 /* These inject tags are used for dynamically creating imports for themelet styles, you can place them where ever you like in this file. */
 
@@ -109,6 +109,12 @@ h1,h2,h3,h4,h5,h6,strong {
     &.controls-visible {
         .portlet-asset-publisher {
             margin-top: 50px;
+        }
+    }
+    
+    .portlet {
+        > .portlet-topper {
+            z-index: 10000; 
         }
     }
 }
