--- a/src/main/webapp/css/_variables.scss
+++ b/src/main/webapp/css/_variables.scss
@@ -2,8 +2,8 @@
     _variables.scss: common variables of the flussbad-theme
 
     Created:    2017-09-07 16:16 by Christian Berndt
-    Modified:   2017-09-16 15:30 by Christian Berndt
-    Version:    1.0.2
+    Modified:   2017-10-31 22:14 by Christian Berndt
+    Version:    1.0.3
 */
 
 /** ------------- colors ------------- */
@@ -54,3 +54,5 @@ $mobile-h1-line-height: 39px;
 $mobile-h2-font-size: 24px;
 $mobile-lead-font-size: 18px;
 $mobile-lead-line-height: 28px;
+
+$nav-height: 60px;
