--- a/src/main/webapp/css/_adt.scss
+++ b/src/main/webapp/css/_adt.scss
@@ -2,8 +2,8 @@
     _adt.scss: Configuration of application display templates of the flussbad-theme
 
     Created:    2017-09-13 19:02 by Christian Berndt
-    Modified:   2017-10-31 15:22 by Christian Berndt
-    Version:    0.1.6
+    Modified:   2017-10-31 22:12 by Christian Berndt
+    Version:    0.1.7
 */
 
 @import "custom_mixins";
@@ -201,4 +201,70 @@
             color: white;
         }   
     } 
+}
+
+.portlet-site-map {
+
+    .buttons {
+    
+        background-color: lighten($color-sand, 3%);
+        margin-left: -15px; 
+        margin-right: -15px;
+        text-align: center;
+        
+        a {           
+            @include filter-item(); 
+        }
+
+        a.selected {            
+            @include filter-item-selected(); 
+        }
+        
+        ul {    
+         
+            list-style: none;
+            margin: 15px 0;
+            
+            li {
+            
+                line-height: 45px;
+                margin: 0; 
+                padding: 0; 
+            }
+        }
+    }
+    
+    .toggle {
+    
+        background-color: lighten($color-sand, 3%);    
+        color: $navigation-font-color;
+        cursor: pointer;                     
+        font-family: $regular-font-family;
+        font-size: $h2-font-size;
+        padding: 17.5px 25px;
+        position: fixed; 
+        right: 0; 
+        top: $nav-height;
+        z-index: 100;
+        
+        .toggle-button {
+    
+          -webkit-transition: -webkit-transform 0.2s ease-in-out;
+             -moz-transition: -moz-transform 0.2s ease-in-out;
+               -o-transition: -o-transform 0.2s ease-in-out;  
+                  transition: 0.2s ease-in-out;
+            
+            @include rotate(0);             
+        }      
+        
+        &.manually--closed .toggle-button,
+        &.headroom--unpinned .toggle-button {
+          -webkit-transition: -webkit-transform 0.2s ease-in-out;
+             -moz-transition: -moz-transform 0.2s ease-in-out;
+               -o-transition: -o-transform 0.2s ease-in-out;  
+                  transition: 0.2s ease-in-out;
+
+            @include rotate(0deg);
+        }      
+    }   
 }
