--- a/src/main/webapp/css/_custom.scss
+++ b/src/main/webapp/css/_custom.scss
@@ -2,8 +2,8 @@
     _custom.scss: main config of the flussbad-theme
 
     Created:    2017-09-07 16:32 by Christian Berndt
-    Modified:   2017-10-31 19:05 by Christian Berndt
-    Version:    1.1.4
+    Modified:   2017-10-31 22:13 by Christian Berndt
+    Version:    1.1.5
 */
 /* These inject tags are used for dynamically creating imports for themelet styles, you can place them where ever you like in this file. */
 
@@ -46,6 +46,10 @@ body {
     font-family: $regular-font-family;
     font-size: $default-font-size;
     font-size-adjust: $default-font-size-adjust;
+}
+
+#content {
+    margin-top: $nav-height; 
 }
 
 .control-menu {
@@ -114,7 +118,7 @@ h1,h2,h3,h4,h5,h6,strong {
     
     .portlet {
         > .portlet-topper {
-            z-index: 10000; 
+            z-index: 1000; 
         }
     }
 }
