--- a/src/main/webapp/css/_navigation.scss
+++ b/src/main/webapp/css/_navigation.scss
@@ -2,8 +2,8 @@
     _navigation.scss: main-navigation of the flussbad-theme.
 
     Created:    2017-03-05 23:08 by Christian Berndt
-    Modified:   2017-09-19 16:01 by Christian Berndt
-    Version:    1.0.9
+    Modified:   2017-10-31 22:13 by Christian Berndt
+    Version:    1.1.0
 */
 
 @import "variables";
@@ -14,6 +14,7 @@
     font-family: $bold-font-family;
     font-weight: normal;
 /*     opacity: 0.95; */
+    min-height: $nav-height; 
     text-transform: uppercase;
     width: 100%;
     z-index: 11;
