--- a/src/main/webapp/css/_navigation.scss
+++ b/src/main/webapp/css/_navigation.scss
@@ -2,8 +2,8 @@
     _navigation.scss: main-navigation of the flussbad-theme.
 
     Created:    2017-03-05 23:08 by Christian Berndt
-    Modified:   2017-10-31 22:13 by Christian Berndt
-    Version:    1.1.0
+    Modified:   2017-10-31 23:04 by Christian Berndt
+    Version:    1.1.1
 */
 
 @import "variables";
@@ -89,7 +89,7 @@
                             
                             > a {
                             
-                                color: $color-turquois;                         
+                                color: $color-turquois; 
                                 padding: 3px 5px; 
                                 
                                 &:hover {
@@ -158,6 +158,7 @@
                 color: $navigation-font-color;
                 display: inline-block;
                 font-size: $default-font-size;
+                letter-spacing: .1em;
                 padding: 20px 10px; 
                 word-break: normal;
 
@@ -204,7 +205,8 @@
             
                 > a {
                     display: block;
-                    font-family: $regular-font-family;
+                    font-family: $bold-font-family;                    
+                    font-size: $small-font-size;               
                     
                     &.current {
                         color: $active-font-color;                 
