--- a/src/main/webapp/css/_responsive.scss
+++ b/src/main/webapp/css/_responsive.scss
@@ -2,8 +2,8 @@
     _responsive.scss: responsive configuration of the flussbad-theme
 
     Created:    2017-09-12 19:34 by Christian Berndt
-    Modified:   2017-10-31 22:14 by Christian Berndt
-    Version:    0.2.5
+    Modified:   2017-10-31 23:04 by Christian Berndt
+    Version:    0.2.6
 */
 
 
@@ -228,7 +228,7 @@
                     display: inline-block;
                     
                     a {
-                        padding: 18px 10px !important;
+                        padding: 22px 10px 20px !important;
                     }
                 } 
             }  
