--- a/src/main/webapp/css/_bs4.scss
+++ b/src/main/webapp/css/_bs4.scss
@@ -2,17 +2,19 @@
     _bs4.scss: bs4 backports used in the flussbad-theme
 
     Created:    2017-10-31 18:38 by Christian Berndt
-    Modified:   2017-10-31 18:38 by Christian Berndt
-    Version:    1.0.0
+    Modified:   2017-11-06 23:26 by Christian Berndt
+    Version:    1.0.1
 */
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
     
     .intro {
+    
         .align-items-stretch {
         
             display: flex;
+            width: 100%;
         
             -ms-flex-align: stretch !important;
             align-items: stretch !important;
