--- a/src/main/webapp/css/_custom.scss
+++ b/src/main/webapp/css/_custom.scss
@@ -2,8 +2,8 @@
     _custom.scss: main config of the flussbad-theme
 
     Created:    2017-09-07 16:32 by Christian Berndt
-    Modified:   2018-01-17 11:50 by Christian Berndt
-    Version:    1.1.8
+    Modified:   2018-01-17 12:27 by Christian Berndt
+    Version:    1.1.9
 */
 /* These inject tags are used for dynamically creating imports for themelet styles, you can place them where ever you like in this file. */
 
@@ -126,7 +126,7 @@ h1,h2,h3,h4,h5,h6,strong {
     
     #navigation {
 
-        margin-top: 50px;
+        margin-top: 48px;
         
         .portlet {
     
@@ -141,6 +141,12 @@ h1,h2,h3,h4,h5,h6,strong {
         > .portlet-topper {
             z-index: 1000; 
         }
+    }
+}
+
+.start-page {
+    #content {
+        margin-top: 0; 
     }
 }
 
