Improved events-small configuration.

--- a/src/main/webapp/css/_adt.scss
+++ b/src/main/webapp/css/_adt.scss
@@ -2,8 +2,8 @@
     _adt.scss: Configuration of application display templates of the flussbad-theme
 
     Created:    2017-09-13 19:02 by Christian Berndt
-    Modified:   2017-10-31 22:12 by Christian Berndt
-    Version:    0.1.7
+    Modified:   2018-01-17 13:38 by Christian Berndt
+    Version:    0.1.8
 */
 
 @import "custom_mixins";
@@ -13,7 +13,7 @@
     
     .articles {
         
-        font-size: $mobile-default-font-size;    
+        font-size: $default-font-size;    
         margin-left: -15px;
         margin-right: -15px;
         
@@ -28,8 +28,8 @@
         }
         
         h1 {
-            font-size: $mobile-h2-font-size;
-            line-height: $mobile-lead-line-height;
+            font-size: $h2-font-size;
+            line-height: $lead-line-height;
             margin-top: 10px;       
         }
                 
@@ -47,8 +47,8 @@
         }
         
         .summary {
-            font-size: $mobile-lead-font-size;
-            line-height: $mobile-lead-line-height;        
+            font-size: $lead-font-size;
+            line-height: $lead-line-height;        
         }
     }
     
@@ -120,16 +120,34 @@
     }
     
     .events-small {
-    
+
+        margin-left: -15px;
+        margin-right: -15px;
+        padding-top: 2em;
         text-align: center;
         
+        .alert {
+            margin-left: 15px;
+            margin-right: 15px;
+        }
+        
+        h1 {
+            padding: 1em 0;
+        }
+        
         h2 {
-            font-size: $lead-font-size; 
+            font-size: 21px;
+            line-height: 28px; 
             
             &.date {
                 font-family: $regular-font-family; 
                 font-weight: normal;
-            }      
+                margin-bottom: 0;
+            }
+            
+            &.title {
+                margin-top: 0; 
+            }     
         }
     }
         
