--- a/src/main/webapp/css/_variables.scss
+++ b/src/main/webapp/css/_variables.scss
@@ -2,8 +2,8 @@
     _variables.scss: common variables of the flussbad-theme
 
     Created:    2017-09-07 16:16 by Christian Berndt
-    Modified:   2018-01-17 12:52 by Christian Berndt
-    Version:    1.0.4
+    Modified:   2018-01-18 17:10 by Christian Berndt
+    Version:    1.0.5
 */
 
 /** ------------- colors ------------- */
@@ -35,18 +35,19 @@ $bold-font-family: 'Apercu Pro Bold', Calibri, Roboto, sans-serif;
 $light-font-family: 'Apercu Pro Light', Calibri, Roboto, sans-serif;
 
 $default-font-size: 14px;
-/* $default-font-size: 16px; */
+$default-sm-font-size: 16px;
 $default-font-size-adjust:0.508;
 $default-line-height: 19px;
-/* $default-line-height: 21px; */
+$default-sm-line-height: 21px;
 $h1-font-size: 32px;
-/* $h1-font-size: 36px; */
+$h1-sm-font-size: 36px;
 $h1-line-height: 39px;
-/* $h1-line-height: 42px; */
+$h1-sm-line-height: 42px;
 $h2-font-size: 24px;
-/* $h2-font-size: 28px; */
+$h2-sm-font-size: 28px;
 $h2-line-height: 36px;
 $h3-font-size: $default-font-size;
+$h3-sm-font-size: $default-sm-font-size;
 $lead-font-size: 18px; 
 /* $lead-font-size: 21px;  */
 $lead-line-height: 28px;
@@ -54,4 +55,5 @@ $lead-line-height: 28px;
 $letter-spacing-wide: 0.1em;
 $small-font-size: 13px;
 
+$container-push: -165px;
 $nav-height: 60px;
