--- a/src/main/webapp/css/_templates.scss
+++ b/src/main/webapp/css/_templates.scss
@@ -3,7 +3,7 @@
     of the flussbad-theme.
 
     Created:    2017-09-07 17:21 by Christian Berndt
-    Modified:   2018-01-18 15:16 by Christian Berndt
+    Modified:   2018-02-12 01:30 by Stefan Luebbers
     Version:    1.1.1
 */
 
@@ -181,8 +181,29 @@ h3 {
             -webkit-border-image: url(../images/border-wave.png) 15 0 15 0 round;
             -o-border-image: url(../images/border-wave.png) 15 0 15 0 round;
             border-top: 13px solid transparent; 
-            
         }
+        .panel{
+            .panel-heading {
+                padding: 0px 0px;
+                border-bottom: 0px solid transparent;
+                border-bottom-color: transparent;
+                border-top-right-radius: 0px;
+                border-top-left-radius: 0px;
+                background-color: transparent;
+                border-color: transparent
+            }
+            .panel-body {
+                padding: 0px;
+            }
+            .panel-footer {
+                padding: 0px 0px;
+                background-color: transparent;
+                border-top: 0px solid #ddd;
+                border-bottom-right-radius: 0px;
+                border-bottom-left-radius: 0px;
+            }
+        }
+        
         
         h1 {
             color: white;
