--- a/src/main/webapp/css/_custom.scss
+++ b/src/main/webapp/css/_custom.scss
@@ -105,6 +105,28 @@ h1,h2,h3,h4,h5,h6,strong {
     }
 }
 
+.panel-default{
+    background-color: transparent;
+    border: none;
+    box-shadow: none;
+}
+.panel{
+    .panel-heading {
+        padding: 0px 0px;
+        border: none;
+        box-shadow: none;
+        background-color: transparent;
+    }
+    .panel-body {
+        padding: 0px;
+    }
+    .panel-footer {
+        padding: 0px 0px;
+        background-color: transparent;
+        border: none;
+    }
+}
+
 .portlet {
     
     h2.portlet-title-text {
